# python-project-template

./: Dockerfile  LICENSE  README.md  Taskfile.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/my_project/: __main__.py  calculator.py
tests/: test_calculator.py  test_main.py
