[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "READEME.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.26.7",
    "rich>=13.0.0",
    "typer>=0.12.0",
]


[dependency-groups]
dev = [
    "coverage[toml]>=7.13.0",
    "go-task-bin>=3.46.4",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]


[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["E501"]
unfixable = ["F401"]

pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["./src"]
